# prism

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  basic-01.cpp  basic-02.cpp  basic-03.cpp  basic-04.cpp  hello-asio.cpp  main.cpp
src/prism/: CMakeLists.txt  channel.cpp  channel.hpp  consumer.cpp  consumer.hpp  dispatch.cpp  dispatch.hpp  media_info.hpp  time.hpp  video_info.hpp
src/prism/consumer/: screen.cpp  screen.hpp
